# SpectralSuite

./: .gitignore  CMakeLists.txt  README.md  SpectralSuite.jucer  fxobjects.h
Builds/VisualStudio2019/: MathConstants.h  SpectralSuite.sln  SpectralSuite_SharedCode.vcxproj  SpectralSuite_SharedCode.vcxproj.filters  SpectralSuite_StandalonePlugin.vcxproj  SpectralSuite_VST.vcxproj  SpectralSuite_VST.vcxproj.filters  SpectralSuite_VST3.vcxproj  fftw3.h  wpFFT.cpp  wpFFT.h
Builds/VisualStudio2019/enc_temp_folder/6553f336f51e575ffc870c4ae7b9cae/: SSLookAndFeel.h
Builds/VisualStudio2022/: SpectralSuite.sln  SpectralSuite_SharedCode.vcxproj  SpectralSuite_SharedCode.vcxproj.filters  SpectralSuite_StandalonePlugin.vcxproj  SpectralSuite_VST.vcxproj  SpectralSuite_VST.vcxproj.filters  SpectralSuite_VST3.vcxproj  resources.rc
CSDs/: SpectralSuiteORCSCO.csd  aidelay.csd
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: FFTEffect.cpp  FFTEffect.h  MathConstants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SSLookAndFeel.h  cplxd.h  sincostable.h
Source/DSP/: MathConstants.h  wpFFT.cpp  wpFFT.h
Source/Engine/: FFTEffect.cpp  FFTEffect.h
Source/GUI/: RandomIcon.h  SSLookAndFeel.cpp  SSLookAndFeel.h
Source/Resource/: Timmana.cpp  Timmana.h
